Changed logos to SVG format

--- a/League/Styles/site/site.scss
+++ b/League/Styles/site/site.scss
@@ -23,7 +23,7 @@ body {
         font-size: 1.4rem !important;
         margin: 0 !important;
     }
-    
+
     header .header-logo {
         font-size: 1.2rem;
 
@@ -42,6 +42,10 @@ body {
             color: white;
             font-weight: bold !important;
             margin-right: 8px
+        }
+
+        img {
+
         }
     }
 
