--- a/League/Views/Home/AboutLeague.de.cshtml
+++ b/League/Views/Home/AboutLeague.de.cshtml
@@ -32,7 +32,7 @@
             </ul>
         </article>
         <article class="col-2 col-sm-4">
-            <img class="img-fluid rounded text-right" src="/images/logo-league-lg.png" alt="League">
+            <img class="img-fluid rounded text-right" src="/images/logo-volleyball-league.svg" alt="League">
         </article>
     </div>
     <div class="row">
