--- a/League/Views/Home/LegalDisclosure.cshtml
+++ b/League/Views/Home/LegalDisclosure.cshtml
@@ -58,7 +58,7 @@
             </p>
         </article>
         <article class="col-md-6">
-            <img src="@Url.Content("~/images/logo-axuno.png")" alt="Logo axuno"/>
+            <img src="@Url.Content("~/images/logo-axuno.svg")" height="84" alt="Logo axuno"/>
         </article>
     </div>
 </div>
