--- a/League/Views/Home/PictureCredits.cshtml
+++ b/League/Views/Home/PictureCredits.cshtml
@@ -11,8 +11,8 @@
 <div class="mb-0 pb-1">
     <p>@Localizer["We give credit to the following list of pictures"]:</p>
     <p>
-        <a href="@Url.Content("~/images/logo-league-lg.png")" class="credit">© vectorstock 14122148 / vectorstock.com</a><br />
-        <a href="@Url.Content("~/images/logo-axuno.png")" class="credit">© Elaelo / fotolia.com</a><br />
+        <a href="@Url.Content("~/images/logo-volleyball-league.svg")" class="credit">© vectorstock 14122148 / vectorstock.com</a><br />
+        <a href="@Url.Content("~/images/logo-axuno.svg")" class="credit">© Elaelo / fotolia.com</a><br />
         <a href="@Url.Content("~/images/a-beach.jpg")" class="credit">© 27375447_ml_madabatman / 123rf.com</a><br />
         <a href="@Url.Content("~/images/a-indoor.jpg")" class="credit">© 27386872_ml_madabatman / 123rf.com</a><br />
         <a href="@Url.Content("~/images/home_welcome_carousel-01.png")" class="credit">© vectorstock 14122148 / vectorstock.com</a><br />
