--- a/League/Views/Home/LegalDisclosure.de.cshtml
+++ b/League/Views/Home/LegalDisclosure.de.cshtml
@@ -57,7 +57,7 @@
             </p>
         </article>
         <article class="col-md-6">
-            <img src="@Url.Content("~/images/logo-axuno.png")" alt="Logo axuno"/>
+            <img src="@Url.Content("~/images/logo-axuno.svg")" height="84" alt="Logo axuno"/>
         </article>
     </div>
 </div>
